# robox

./: arm.ino  frames_2025-05-31_08.33.44.gv  frames_2025-06-03_16.37.17.gv  frames_2025-06-11_12.16.36.gv  frames_2025-06-11_12.27.34.gv  frames_2025-06-11_14.23.11.gv  frames_2025-06-12_09.53.38.gv  frames_2025-06-12_11.00.26.gv  frames_2025-06-12_12.49.48.gv  frames_2025-06-12_14.00.41.gv  frames_2025-06-14_02.26.16.gv  frames_2025-06-15_10.07.10.gv  frames_2025-06-18_17.07.36.gv  frames_2025-06-18_17.09.18.gv  frames_2025-06-27_19.25.26.gv  frames_2025-06-27_19.40.30.gv  frames_2025-06-27_20.01.39.gv  frames_2025-06-27_21.40.29.gv  robox_arm.urdf
PS2_Robot_Arm_under_production/: PS2_Robot_Arm_under_production.ino
Robot_Arm_ROS/: Robot_Arm_ROS.ino  new_arm.ino  ps2_desktop_arm.ino
ik_interface/ik_interface/: task_server.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduino_arm_hardware_interface/share/arduino_arm_hardware_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduino_arm_hardware_interface/share/arduino_arm_hardware_interface/cmake/: arduino_arm_hardware_interfaceConfig.cmake
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.12.3  libchomp_motion_planner.so.2.14.0
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.12.3  libcollision_detector_bullet_plugin.so.2.14.0  libcollision_detector_fcl_plugin.so.2.12.3  libcollision_detector_fcl_plugin.so.2.14.0  libmoveit_acceleration_filter.so.2.12.3  libmoveit_acceleration_filter.so.2.14.0  libmoveit_butterworth_filter.so.2.12.3  libmoveit_butterworth_filter.so.2.14.0  libmoveit_collision_detection.so.2.12.3  libmoveit_collision_detection.so.2.14.0  libmoveit_collision_detection_bullet.so.2.12.3  libmoveit_collision_detection_bullet.so.2.14.0  libmoveit_collision_detection_fcl.so.2.12.3  libmoveit_collision_detection_fcl.so.2.14.0  libmoveit_collision_distance_field.so.2.12.3  libmoveit_collision_distance_field.so.2.14.0  libmoveit_constraint_samplers.so.2.12.3  libmoveit_constraint_samplers.so.2.14.0  libmoveit_distance_field.so.2.12.3  libmoveit_distance_field.so.2.14.0  libmoveit_dynamics_solver.so.2.12.3  libmoveit_dynamics_solver.so.2.14.0  libmoveit_exceptions.so.2.12.3  libmoveit_exceptions.so.2.14.0  libmoveit_kinematic_constraints.so.2.12.3  libmoveit_kinematic_constraints.so.2.14.0  libmoveit_kinematics_metrics.so.2.12.3  libmoveit_kinematics_metrics.so.2.14.0  libmoveit_planning_interface.so.2.12.3  libmoveit_planning_interface.so.2.14.0  libmoveit_planning_scene.so.2.12.3  libmoveit_planning_scene.so.2.14.0  libmoveit_robot_model.so.2.12.3  libmoveit_robot_model.so.2.14.0  libmoveit_robot_state.so.2.12.3  libmoveit_robot_state.so.2.14.0  libmoveit_robot_trajectory.so.2.12.3  libmoveit_robot_trajectory.so.2.14.0  libmoveit_ruckig_filter.so.2.12.3  libmoveit_ruckig_filter.so.2.14.0  (+10 more)
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.12.3  libmotion_planning_pipeline_plugin.so.2.12.3  libmoveit_global_planner_component.so.2.12.3  libmoveit_hybrid_planning_manager.so.2.12.3  libmoveit_local_planner_component.so.2.12.3  libreplan_invalidated_trajectory_plugin.so.2.12.3  libsimple_sampler_plugin.so.2.12.3  libsingle_plan_execution_plugin.so.2.12.3
install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.12.3  libmoveit_cached_ik_kinematics_plugin.so.2.12.3  libmoveit_srv_kinematics_plugin.so.2.12.3
install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.12.3  libmoveit_chomp_interface.so.2.14.0
install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.12.3  libmoveit_ompl_planner_plugin.so.2.12.3
install/moveit_py/lib/: libmoveit_py_utils.so.
install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.12.3
install/robox_arm/share/robox_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/robox_arm/share/robox_arm/cmake/: robox_armConfig-version.cmake  robox_armConfig.cmake
install/robox_arm/share/robox_arm/environment/: ament_prefix_path.dsv  path.dsv
install/robox_arm/share/robox_arm/launch/: display.launch.py  gazebo.launch  joystick_arm_display.launch.py
install/robox_arm/share/robox_arm/meshes/: base_link.STL  link_five.STL  link_four.STL  link_one.STL  link_seven.STL  link_six.STL  link_three.STL  link_two.STL
install/robox_arm/share/robox_arm/rviz/: robot.rviz
install/robox_arm/share/robox_arm/urdf/: robox_arm.csv  robox_arm.urdf
log/: latest_build  latest_list
ps2_desktop/ps2_desktop_arm/: ps2_desktop_arm.ino
src/arduino_arm_hardware_interface/: CMakeLists.txt  arduino_arm_system_plugin.xml
src/arduino_arm_hardware_interface/src/: arduino_arm_system.cpp
src/arduinobot_py_examples/: package.xml  setup.py
src/arduinobot_py_examples/srv/: go_to_pose.srv
src/arm_description/: CMakeLists.txt
src/arm_description/launch/: display.launch.py  moveit_ik_launch.py
src/arm_description/meshes/: base_link.STL  forearm_link.STL  gripper_left_link.STL  gripper_right_link.STL  rotating_base_link.STL  shoulder_link.STL  wrist_link.STL
src/arm_description/src/: pose.cpp
src/arm_description/urdf/: arm.urdf  arm_simplified.urdf
src/arm_moveit/: CMakeLists.txt
src/color_pose_publisher/: setup.cfg  setup.py
src/cube_msgs/: CMakeLists.txt
src/dashboard/: setup.py
src/install/: local_setup.sh  setup.sh  setup.zsh
src/install/arduinobot_py_examples/share/arduinobot_py_examples/: package.sh  package.xml
src/install/color_pose_publisher/share/color_pose_publisher/: package.sh  package.xml
src/install/color_pose_publisher/share/color_pose_publisher/assets/: camera_calibration_data.npz
src/log/: latest_build  latest_mixin
src/moveit_config/: .setup_assistant
src/robotic_arm_moveit_config/: CMakeLists.txt  package.xml
src/robox_arm/: CMakeLists.txt
src/robox_moveit_config/: CMakeLists.txt
src/robox_robotic_arm_GUI/: backend.py  frontend.py  main.py  robox_GUI.py  run_gui.sh
(+2178 files in other folders)
