<?xml version="1.0"?>
<package format="3">
  <name>robox_arm</name>
  <version>1.0.0</version>
  <description>URDF package for robot description</description>
  <maintainer email="mohamed.m.sabir@gmail.com">saber</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
