<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>color_pose_publisher</name>
  <version>0.0.1</version>
  <description>Python examples for controlling Arduinobot with MoveItPy and ROS 2</description>

  <maintainer email="saber@todo.todo">Saber</maintainer>
  <license>Apache-2.0</license>


  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- ROS 2 Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <!-- <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> -->

  <!-- Visualization -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Simulation tools -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- MoveItPy dependencies -->
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>robotic_arm_moveit_config</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
